refactor: Introduce HTTP proxy (#4691)