@@ -16,7 +16,6 @@
 package io.confluent.ksql.rest.server;
 
 import static io.confluent.ksql.rest.server.KsqlRestConfig.DISTRIBUTED_COMMAND_RESPONSE_TIMEOUT_MS_CONFIG;
-import static io.confluent.rest.RestConfig.LISTENERS_CONFIG;
 import static java.util.Objects.requireNonNull;
 
 import com.fasterxml.jackson.jaxrs.base.JsonParseExceptionMapper;
@@ -94,7 +93,7 @@ import io.confluent.ksql.services.ServiceContext;
 import io.confluent.ksql.services.SimpleKsqlClient;
 import io.confluent.ksql.statement.ConfiguredStatement;
 import io.confluent.ksql.util.KsqlConfig;
-import io.confluent.ksql.util.KsqlServerException;
+import io.confluent.ksql.util.KsqlException;
 import io.confluent.ksql.util.ReservedInternalTopics;
 import io.confluent.ksql.util.RetryUtil;
 import io.confluent.ksql.util.Version;
@@ -112,7 +111,6 @@ import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedList;
@@ -128,15 +126,17 @@ import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import javax.websocket.DeploymentException;
 import javax.websocket.server.ServerEndpoint;
 import javax.websocket.server.ServerEndpointConfig;
 import javax.websocket.server.ServerEndpointConfig.Configurator;
 import javax.ws.rs.core.Configurable;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.kafka.common.config.SslConfigs;
+import org.apache.kafka.common.config.types.Password;
 import org.apache.kafka.streams.StreamsConfig;
 import org.apache.log4j.LogManager;
+import org.eclipse.jetty.server.Connector;
 import org.eclipse.jetty.server.ServerConnector;
 import org.eclipse.jetty.websocket.jsr356.server.ServerContainer;
 import org.glassfish.hk2.utilities.Binder;
@@ -178,9 +178,47 @@ public final class KsqlRestApplication extends ExecutableApplication<KsqlRestCon
   // We embed this in here for now
   private Vertx vertx = null;
   private Server apiServer = null;
+  private ApiServerConfig apiServerConfig;
 
   public static SourceName getCommandsStreamName() {
     return COMMANDS_STREAM_NAME;
+  }
+
+  public static KsqlRestConfig convertToLocalListener(final KsqlRestConfig config) {
+    final Map<String, Object> origs = config.getOriginals();
+    origs.put(KsqlRestConfig.LISTENERS_CONFIG, "http://127.0.0.1:0");
+    return new KsqlRestConfig(origs);
+  }
+
+  public static KsqlRestConfig convertToApiServerConfig(final KsqlRestConfig config) {
+
+    final List<String> listeners = config.getList(KsqlRestConfig.LISTENERS_CONFIG);
+    final Map<String, Object> origs = config.getOriginals();
+    origs.put(ApiServerConfig.LISTENERS, listeners);
+
+    final String keyStoreLocation = config.getString(SslConfigs.SSL_KEYSTORE_LOCATION_CONFIG);
+    if (keyStoreLocation != null && !keyStoreLocation.isEmpty()) {
+      origs.put(ApiServerConfig.TLS_KEY_STORE_PATH, keyStoreLocation);
+      final Password keyStorePassword = config.getPassword(SslConfigs.SSL_KEYSTORE_PASSWORD_CONFIG);
+      origs.put(ApiServerConfig.TLS_KEY_STORE_PASSWORD,
+          keyStorePassword == null ? "" : keyStorePassword.value());
+      @SuppressWarnings("deprecation") final boolean clientauth = config
+          .getBoolean(SslConfigs.SSL_CLIENT_AUTH_CONFIG);
+      if (clientauth) {
+        final String trustStoreLocation = config
+            .getString(SslConfigs.SSL_TRUSTSTORE_LOCATION_CONFIG);
+        if (trustStoreLocation != null && !trustStoreLocation.isEmpty()) {
+          origs.put(ApiServerConfig.TLS_TRUST_STORE_PATH, trustStoreLocation);
+          final Password trustStorePassword = config
+              .getPassword(SslConfigs.SSL_TRUSTSTORE_PASSWORD_CONFIG);
+          origs.put(ApiServerConfig.TLS_TRUST_STORE_PASSWORD,
+              trustStorePassword == null ? "" : trustStorePassword.value());
+          origs.put(ApiServerConfig.TLS_CLIENT_AUTH_REQUIRED, "required");
+        }
+      }
+    }
+
+    return new KsqlRestConfig(origs);
   }
 
   // CHECKSTYLE_RULES.OFF: ParameterNumberCheck
@@ -261,7 +299,8 @@ public final class KsqlRestApplication extends ExecutableApplication<KsqlRestCon
 
   @Override
   public void startAsync() {
-    log.info("KSQL RESTful API listening on {}", StringUtils.join(getListeners(), ", "));
+    startApiServer(ksqlConfigNoPort);
+
     final KsqlConfig ksqlConfigWithPort = buildConfigWithPort();
     configurables.forEach(c -> c.configure(ksqlConfigWithPort));
     startKsql(ksqlConfigWithPort);
@@ -270,17 +309,11 @@ public final class KsqlRestApplication extends ExecutableApplication<KsqlRestCon
     if (versionCheckerAgent != null) {
       versionCheckerAgent.start(KsqlModuleType.SERVER, metricsProperties);
     }
-    if (ksqlConfigWithPort.getBoolean(KsqlConfig.KSQL_NEW_API_ENABLED)) {
-      startApiServer(ksqlConfigWithPort);
-    }
-    displayWelcomeMessage();
-  }
 
-  public int getActualVertxPort() {
-    if (apiServer == null) {
-      throw new IllegalStateException("No Vert.x api Server");
-    }
-    return apiServer.getActualPort();
+    apiServer.setJettyPort(getJettyPort());
+
+    log.info("KSQL RESTful API listening on {}", StringUtils.join(getListeners(), ", "));
+    displayWelcomeMessage();
   }
 
   @VisibleForTesting
@@ -299,8 +332,8 @@ public final class KsqlRestApplication extends ExecutableApplication<KsqlRestCon
         RestServiceContextFactory::create,
         new PullQueryExecutorDelegate(pullQueryExecutor)
     );
-    final ApiServerConfig config = new ApiServerConfig(ksqlConfigWithPort.originals());
-    apiServer = new Server(vertx, config, endpoints);
+    apiServerConfig = new ApiServerConfig(ksqlConfigWithPort.originals());
+    apiServer = new Server(vertx, apiServerConfig, endpoints, true);
     apiServer.start();
     log.info("KSQL New API Server started");
   }
@@ -439,48 +472,27 @@ public final class KsqlRestApplication extends ExecutableApplication<KsqlRestCon
     triggerShutdown();
   }
 
+  // Current tests require URIs as URLs, even though they're not URLs
   List<URL> getListeners() {
-    final Function<URL, Set<Integer>> resolvePort = url ->
-        Arrays.stream(server.getConnectors())
-            .filter(connector -> connector instanceof ServerConnector)
-            .map(ServerConnector.class::cast)
-            .filter(connector -> {
-              final String connectorProtocol = connector.getProtocols().stream()
-                  .map(String::toLowerCase)
-                  .anyMatch(p -> p.equals("ssl")) ? "https" : "http";
-
-              return connectorProtocol.equalsIgnoreCase(url.getProtocol());
-            })
-            .map(ServerConnector::getLocalPort)
-            .collect(Collectors.toSet());
-
-    final Function<String, Stream<URL>> resolveUrl = listener -> {
+    return apiServer.getListeners().stream().map(uri -> {
       try {
-        final URL url = new URL(listener);
-        if (url.getPort() != 0) {
-          return Stream.of(url);
-        }
-
-        // Need to resolve port using actual listeners:
-        return resolvePort.apply(url).stream()
-            .map(port -> {
-              try {
-                return new URL(url.getProtocol(), url.getHost(), port, url.getFile());
-              } catch (final MalformedURLException e) {
-                throw new KsqlServerException("Malformed URL specified in '"
-                    + LISTENERS_CONFIG + "' config: " + listener, e);
-              }
-            });
-      } catch (final MalformedURLException e) {
-        throw new KsqlServerException("Malformed URL specified in '"
-            + LISTENERS_CONFIG + "' config: " + listener, e);
+        return uri.toURL();
+      } catch (MalformedURLException e) {
+        throw new KsqlException(e);
       }
-    };
+    }).collect(Collectors.toList());
+  }
 
-    return restConfig.getList(LISTENERS_CONFIG).stream()
-        .flatMap(resolveUrl)
-        .distinct()
-        .collect(Collectors.toList());
+  int getJettyPort() {
+    final Connector[] connectors = server.getConnectors();
+    if (connectors.length != 1) {
+      throw new IllegalStateException("Should be only one connector");
+    }
+    if (!(connectors[0] instanceof ServerConnector)) {
+      throw new IllegalStateException("Not a ServerConnector");
+    }
+    final ServerConnector serverConnector = (ServerConnector) connectors[0];
+    return serverConnector.getLocalPort();
   }
 
   @Override
